--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,14 @@
-name: Deploy Bicep com Azure via OIDC
+name: Deploy Bicep com Azure
 
-# Dispara em push para a branch main (altera se a tua branch principal tiver outro nome)
 on:
   push:
     branches:
       - main
       - master
 
-# Permissões necessárias para OIDC
 permissions:
-  id-token: write       # permite obter o token OIDC do GitHub
-  contents: read        # permite checkout do código
+  id-token: write      
+  contents: read       
 
 jobs:
   deploy:
@@ -23,24 +21,71 @@ jobs:
       - name: Login no Azure com Login v2 (OIDC)
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}         # Application (client) ID do SP
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}         # Tenant ID onde a App Registration existe
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}  # Subscription ID alvo
-          # Sem client-secret: usa OIDC (assume que já criaste Federated Identity Credential)
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}         
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}         
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}  
 
       - name: Validar Bicep (build/compilação)
         run: |
-          az bicep install || true   # instala Bicep CLI se não existir (silencia erro se já estiver instalado)
+          az bicep install || true   # instala Bicep CLI se não existir
           az bicep build --file templates/resource-group.bicep
 
-      - name: Deploy Bicep para Azure
+      - name: Deploy Resource Group
         uses: azure/cli@v1
         with:
           inlineScript: |
-            # Opcionalmente, podes definir explicitamente a subscrição (mas normalmente azure/login já define o contexto)
-            # az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
             az deployment sub create \
               --location westeurope \
               --template-file templates/resource-group.bicep \
               --parameters rgName='MiniProjetoCloud2.0' location='westeurope'
+    
+      - name: Deploy Storage + Container
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az deployment group create \
+              --resource-group MiniProjetoCloud2.0 \
+              --template-file templates/storage-account.bicep \
+              --parameters storageAccountName='miniprojetostorage20' containerName='reddit-posts'
+
+      - name: Deploy App Service Plan
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az deployment group create \
+              --resource-group MiniProjetoCloud2.0 \
+              --template-file templates/app-service-plan.bicep \
+              --parameters planName='ASP-MiniProjetoCloud2.0' \
+                          skuTier='Basic' \
+                          skuName='B2' \
+                          capacity=1 \
+                          isLinux=true
+
+      - name: Gerar User Delegation SAS para o container
+        id: gen_sas
+        run: |
+          ACCOUNT_NAME="miniprojetostorage20"
+          CONTAINER_NAME="reddit-posts"
+          # Expiração em UTC (máximo 7 dias). Aqui 1 dia; ajusta conforme precisares.
+          EXPIRY=$(date -u -d "1 day" '+%Y-%m-%dT%H:%MZ')
+          # Gera SAS com permissões read, add, create, list, delete: racld
+          sasToken=$(az storage container generate-sas \
+            --account-name $ACCOUNT_NAME \
+            --name $CONTAINER_NAME \
+            --permissions racld \
+            --expiry $EXPIRY \
+            --https-only \
+            --auth-mode login \
+            --as-user \
+            -o tsv)
+          echo "containerSasToken=$sasToken" >> $GITHUB_OUTPUT
+
+      - name: Deploy Web App com SAS na app settings
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az deployment group create \
+              --resource-group MiniProjetoCloud2.0 \
+              --template-file templates/web-app.bicep \
+              --parameters webAppName='minhaapp-rodrig0salv' \
+                           containerSasToken='${{ steps.gen_sas.outputs.containerSasToken }}'
