--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Bicep com Azure
+name: Deploy Bicep com Azure e VNet + Private Endpoints (Unificado)
 
 on:
   push:
@@ -15,11 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout do repositório
       - name: Checkout do repositório
         uses: actions/checkout@v4
 
-      # 2. Login no Azure via OIDC
       - name: Login no Azure com Login v2 (OIDC)
         uses: azure/login@v2
         with:
@@ -27,65 +25,82 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # 3. Validar o template Bicep unificado
+      - name: Mostrar contexto Azure
+        run: az account show
+
       - name: Validar main.bicep
         run: |
           az bicep install || true
           az bicep build --file templates/main.bicep
 
-      # 4. Criar Resource Group se necessário
-      - name: Criar Resource Group
+      - name: Criar Resource Group se não existir
         run: |
           az group create --name MiniProjetoCloud2.0 --location westeurope
 
-      # 5. Deploy do template unificado
-      - name: Deploy Unificado
-        uses: azure/cli@v1
-        with:
-          inlineScript: |
-            # Ativar shell strict para detectar erros cedo
-            set -euxo pipefail
+      - name: What-If Deploy (opcional)
+        run: |
+          az deployment group what-if \
+            --resource-group MiniProjetoCloud2.0 \
+            --template-file templates/main.bicep \
+            --parameters \
+              vnetName='myVNet' \
+              addressPrefix='10.0.0.0/16' \
+              privateSubnetName='private-subnet' \
+              privateSubnetPrefix='10.0.1.0/24' \
+              publicSubnetName='public-subnet' \
+              publicSubnetPrefix='10.0.2.0/24' \
+              storageAccountName='miniprojetostorage20' \
+              containerName='reddit-posts' \
+              enableBlobVersioning=true \
+              blobSoftDeleteDays=7 \
+              privateEndpointName='pe-storage' \
+              planName='ASP-MiniProjetoCloud2.0' \
+              skuTier='Basic' \
+              skuName='B2' \
+              capacity=1 \
+              isLinux=true \
+              webAppName='minhaapp-rodrig0salv' \
+              imageName='rodrig0salv/minha-app:latest' \
+              containerSasToken='' \
+              containerRegistryUrl='' \
+              containerRegistryUsername='' \
+              containerRegistryPassword='' \
+            --only-show-errors
 
-            echo "Iniciar deploy unificado..."
-            az deployment group create \
-              --resource-group MiniProjetoCloud2.0 \
-              --template-file templates/main.bicep \
-              --parameters \
-                vnetName='myVNet' \
-                addressPrefix='10.0.0.0/16' \
-                privateSubnetName='private-subnet' \
-                privateSubnetPrefix='10.0.1.0/24' \
-                publicSubnetName='public-subnet' \
-                publicSubnetPrefix='10.0.2.0/24' \
-                storageAccountName='miniprojetostorage20' \
-                containerName='reddit-posts' \
-                enableBlobVersioning=true \
-                blobSoftDeleteDays=7 \
-                privateEndpointName='pe-storage' \
-                planName='ASP-MiniProjetoCloud2.0' \
-                skuTier='Basic' \
-                skuName='B2' \
-                capacity=1 \
-                isLinux=true \
-                webAppName='minhaapp-rodrig0salv' \
-                imageName='rodrig0salv/minha-app:latest' \
-                containerSasToken='' \
-                containerRegistryUrl='' \
-                containerRegistryUsername='' \
-                containerRegistryPassword='' \
-              --only-show-errors
+      - name: Deploy Unificado via az CLI
+        run: |
+          set -euxo pipefail
+          echo "Iniciar deploy unificado..."
+          az deployment group create \
+            --resource-group MiniProjetoCloud2.0 \
+            --template-file templates/main.bicep \
+            --parameters \
+              vnetName='myVNet' \
+              addressPrefix='10.0.0.0/16' \
+              privateSubnetName='private-subnet' \
+              privateSubnetPrefix='10.0.1.0/24' \
+              publicSubnetName='public-subnet' \
+              publicSubnetPrefix='10.0.2.0/24' \
+              storageAccountName='miniprojetostorage20' \
+              containerName='reddit-posts' \
+              enableBlobVersioning=true \
+              blobSoftDeleteDays=7 \
+              privateEndpointName='pe-storage' \
+              planName='ASP-MiniProjetoCloud2.0' \
+              skuTier='Basic' \
+              skuName='B2' \
+              capacity=1 \
+              isLinux=true \
+              webAppName='minhaapp-rodrig0salv' \
+              imageName='rodrig0salv/minha-app:latest' \
+              containerSasToken='' \
+              containerRegistryUrl='' \
+              containerRegistryUsername='' \
+              containerRegistryPassword='' \
+            --only-show-errors
 
-      # 6. (Opcional) Mostrar outputs do deploy
       - name: Mostrar outputs do deploy
-        uses: azure/cli@v1
-        with:
-          inlineScript: |
-            # Captura o nome do deployment mais recente no RG
-            DEPLOY_NAME=$(az deployment group list \
-              --resource-group MiniProjetoCloud2.0 \
-              --query '[0].name' -o tsv)
-            echo "Deployment name: $DEPLOY_NAME"
-            az deployment group show \
-              --resource-group MiniProjetoCloud2.0 \
-              --name "$DEPLOY_NAME" \
-              --query properties.outputs
+        run: |
+          DEPLOY_NAME=$(az deployment group list --resource-group MiniProjetoCloud2.0 --query '[0].name' -o tsv)
+          echo "Deployment name: $DEPLOY_NAME"
+          az deployment group show --resource-group MiniProjetoCloud2.0 --name "$DEPLOY_NAME" --query properties.outputs
