--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # 3. Mostrar contexto Azure (subscrição ativa, etc.)
+      # 3. Mostrar contexto Azure (subscrição ativa)
       - name: Mostrar contexto Azure
         run: az account show
 
@@ -72,6 +72,7 @@ jobs:
               containerRegistryUsername='' \
               containerRegistryPassword='' \
               createRoleAssignment=false \
+              skipVnetIntegration=false \
             --only-show-errors
 
       # 7. Deploy Unificado via CLI direto
@@ -106,6 +107,7 @@ jobs:
               containerRegistryUsername='' \
               containerRegistryPassword='' \
               createRoleAssignment=false \
+              skipVnetIntegration=false \
             --only-show-errors
 
       # 8. Mostrar outputs do deploy
