--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Bicep com Azure e VNet + Private Endpoints (Unificado)
+name: Deploy Bicep Unificado com Auto-detect VNet Integration
 
 on:
   push:
@@ -15,11 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout do repositório
       - name: Checkout do repositório
         uses: actions/checkout@v4
 
-      # 2. Login no Azure via OIDC
       - name: Login no Azure com Login v2 (OIDC)
         uses: azure/login@v2
         with:
@@ -27,22 +25,39 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # 3. Mostrar contexto Azure (subscrição ativa)
       - name: Mostrar contexto Azure
         run: az account show
 
-      # 4. Validar main.bicep
       - name: Validar main.bicep
         run: |
           az bicep install || true
           az bicep build --file templates/main.bicep
 
-      # 5. Criar Resource Group se não existir
       - name: Criar Resource Group se não existir
         run: |
           az group create --name MiniProjetoCloud2.0 --location westeurope
 
-      # 6. What-If Deploy (opcional) — usa mesmos parâmetros do deploy real
+      - name: Determinar skipVnetIntegration
+        id: check_integration
+        run: |
+          RG="MiniProjetoCloud2.0"
+          WEBAPP_NAME="minhaapp-rodrig0salv"
+          # Verificar se jq existe
+          if ! command -v jq &>/dev/null; then
+            sudo apt-get update && sudo apt-get install -y jq
+          fi
+          INTEGRATIONS=$(az webapp vnet-integration list \
+            --resource-group "$RG" \
+            --name "$WEBAPP_NAME" \
+            -o json)
+          if [ "$(echo "$INTEGRATIONS" | jq 'length')" -eq 0 ]; then
+            echo "Não existe integração ainda. skipVnetIntegration=false"
+            echo "skipVnetIntegration=false" >> $GITHUB_OUTPUT
+          else
+            echo "Já existe integração. skipVnetIntegration=true"
+            echo "skipVnetIntegration=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: What-If Deploy (opcional)
         run: |
           az deployment group what-if \
@@ -72,10 +87,9 @@ jobs:
               containerRegistryUsername='' \
               containerRegistryPassword='' \
               createRoleAssignment=false \
-              skipVnetIntegration=false \
+              skipVnetIntegration=${{ steps.check_integration.outputs.skipVnetIntegration }} \
             --only-show-errors
 
-      # 7. Deploy Unificado via CLI direto
       - name: Deploy Unificado via az CLI
         run: |
           set -euxo pipefail
@@ -107,10 +121,9 @@ jobs:
               containerRegistryUsername='' \
               containerRegistryPassword='' \
               createRoleAssignment=false \
-              skipVnetIntegration=false \
+              skipVnetIntegration=${{ steps.check_integration.outputs.skipVnetIntegration }} \
             --only-show-errors
 
-      # 8. Mostrar outputs do deploy
       - name: Mostrar outputs do deploy
         run: |
           DEPLOY_NAME=$(az deployment group list --resource-group MiniProjetoCloud2.0 --query '[0].name' -o tsv)
